# app/Http/Requests/UpdateCategoryRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreProductRequest extends FormRequest
+class UpdateCategoryRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -21,11 +21,11 @@ class StoreProductRequest extends FormRequest
      */
     public function rules(): array
     {
+        $categoryId = $this->route('id');
+
         return [
-            'name' => 'required|unique:products,name|max:255',
+            'name' => 'required|unique:categories,name,' . $categoryId . '|max:255',
             'description' => 'nullable|max:500',
-            'quantity' => 'required|integer',
-            'category_id' => 'required|exists:categories,id',
         ];
     }
 }
